--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@metamask/detect-provider": "^2.0.0",
+    "@ethersproject/providers": "^5.6.4",
+    "@metamask/detect-provider": "^1.2.0",
     "@redux-saga/types": "^1.1.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -14,6 +15,9 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@types/redux-logger": "^3.0.9",
+    "@types/web3": "^1.2.2",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
     "bootstrap": "^5.2.2",
     "fabric": "^5.2.4",
     "metamask-react": "^2.4.0",
@@ -23,11 +27,14 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.8",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.4.1",
+    "save-image": "^0.0.3",
     "typescript": "^4.7.4",
+    "use-metamask": "^1.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
